# keepass-mcp-server

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  Dockerfile  FASTMCP_FIX_GUIDE.md  FASTMCP_MIGRATION.md  LICENSE  README.md  URGENT_FIX.md  create_github_repo.sh  debug_server.py  make_executable.sh  pyproject.toml  requirements-dev.txt  requirements-fastmcp.txt  requirements.txt  setup.py  setup_github_mcp.sh  setup_github_publishing.sh  setup_modern_packaging.sh  verify_fix.py
.github/workflows/: ci-cd-fixed.yml  ci-cd.yml.disabled
docs/: API_reference.md  security_guide.md
examples/: bulk_import_example.csv  claude_desktop_config.json  sample_entries.json  usage_examples.md
fix_steps/: fix_keepass_mcp.sh
removed_files/: CLEANUP_REPORT.md  TESTING.md  check_config.sh  cleanup_log.txt  cleanup_migration.sh  cleanup_project.sh  complete_cleanup.sh  debug_fastmcp.py  emergency_fix.sh  fix_fastmcp.py  make-executable.sh  pytest.ini  quick_fix.sh  remove_old_files.sh  run_tests.sh  setup_claude_desktop.sh  setup_fastmcp_claude.sh  test_fastmcp_setup.py  test_setup.sh
removed_files/tests/: test_backup_system.py  test_entry_operations.py  test_group_operations.py  test_search_functionality.py  test_security.py
src/keepass_mcp_server/: __init__.py  __main__.py  __main_fastmcp__.py  __main_fastmcp_fixed__.py  backup_manager.py  config.py  entry_manager.py  exceptions.py  fastmcp_server.py  fastmcp_server_fixed.py  group_manager.py  keepass_handler.py  password_generator.py  search_engine.py  security.py  server.py  validators.py
tests/: __init__.py  test_basic.py  test_integration.py
