[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keepass-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for secure KeePass credential management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nidal Haddad", email = "haddad.nidal1@gmail.com"}
]
maintainers = [
    {name = "Nidal Haddad", email = "haddad.nidal1@gmail.com"}
]
keywords = [
    "keepass",
    "password",
    "credential", 
    "mcp",
    "model-context-protocol",
    "security",
    "authentication",
    "automation",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pykeepass>=4.0.0", 
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
fastmcp = [
    "mcp>=1.9.0"
]

[project.urls]
Homepage = "https://github.com/nidalhaddad1234/keepass-mcp-server"
Documentation = "https://github.com/nidalhaddad1234/keepass-mcp-server/blob/main/README.md" 
Repository = "https://github.com/nidalhaddad1234/keepass-mcp-server"
Issues = "https://github.com/nidalhaddad1234/keepass-mcp-server/issues"
Changelog = "https://github.com/nidalhaddad1234/keepass-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
keepass-mcp-server = "keepass_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
keepass_mcp_server = ["*.json", "*.yml", "*.yaml"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["keepass_mcp_server"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=keepass_mcp_server --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG", 
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
